build: minor changes
